# ArrowShelf

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
arrowshelf/: __init__.py  client.py  exceptions.py  server.py
examples/: benchmark.py  heavy_benchmark.py  process_data.py  ultimate_benchmark_faiss.py  ultimate_benchmark_faiss_ivf.py
src/: main.rs
