[package]
name = "arrowshelfd"
version = "2.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
dashmap = "5.5.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11.3"
uuid = { version = "1.7.0", features = ["v4"] }
tempfile = "3.10.1"