[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "arrowshelf"
version = "2.3.0"
description = "A lightning-fast, zero-copy, cross-process data store for Python using Apache Arrow and shared memory."
readme = "README.md"
authors = [{name = "Your Name", email = "your@email.com"}]
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.0",
    "pyarrow>=10.0",
]

[project.urls]
Homepage = "https://github.com/your-username/arrowshelf"
Repository = "https://github.com/your-username/arrowshelf"

# --- NEW SECTION FOR OPTIONAL DEPENDENCIES ---
# This allows users to install the Numba-specific features with:
# pip install "arrowshelf[numba]"
[project.optional-dependencies]
numba = ["numba"]


[tool.maturin]
manifest-path = "Cargo.toml"
rustc-flags = ["--strip=symbols"]
bin = "arrowshelfd"
target-dir = "arrowshelf/bin"